# HackNation-wyszukiwarka

./: GEMINI.md  README.md  docker-compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
backend/routes/: http.py  ws.py
backend/services/: ImagePreprocessingService.py  ml_service.py
backend/utils/: file_watcher.py
frontend/: .gitignore  Dockerfile  GEMINI.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/components/: FullscreenImage.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/types/: api.ts
